syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "manager_department.proto";
import "manager_role.proto";
import "manager_menu.proto";

message RoleMenu {
  uint32 menu_id = 1;
  uint32 role_id = 2;
  Menu menu = 3;
}

message CurrentRoleMenuTreeReply{
   repeated Menu list = 1;
}

message GetRoleMenuIdsRequest{
  uint32 role_id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetRoleMenuIdsReply{
  repeated uint32 list =1;
}

message UpdateRoleMenuRequest{
  uint32 role_id = 1[(validate.rules).uint32 = {gt:0}];
  repeated uint32 menu_ids = 2[(validate.rules).repeated = {min_items:1}];
}